$Id$

MIDIO128 V3.020
~~~~~~~~~~~~~~~

   o STM32F4: support for bootloader "enforce_usb_device" flag


MIDIO128 V3.019
~~~~~~~~~~~~~~~

   o added SysEx support for MIDI file player and recorder

   o MIDI file recorder now sets "end of track" marker at the end of a 4/4 bar
     to comply with the MIDI file spec, and to allow proper looping

   o support for MBHP_CORE_STM32F4


MIDIO128 V3.018
~~~~~~~~~~~~~~~

   o added USB MIDI workaround for Windows


MIDIO128 V3.017
~~~~~~~~~~~~~~~

   o the MIDI router forwards SysEx messages regardless if channels are filtered,
     or "All" is used. It's ensured that messages are only sent once if multiple
     router nodes forward to the same destination port.

   o corrected MIDI clock output


MIDIO128 V3.016
~~~~~~~~~~~~~~~

   o bugfix for "single_usb" option


MIDIO128 V3.015
~~~~~~~~~~~~~~~

   o support for the "single_usb" option, which can be enabled with the
     bootloader update application V1.012 ("set usb_single 1")

     Use this option if you are working with a Windows PC which can't handle
     the 4 USB ports correctly (e.g. stucking MIDI, Filebrowser operations are failing, etc.)


MIDIO128 V3.014
~~~~~~~~~~~~~~~

   o improved MIDI file loop synchronisation


MIDIO128 V3.013
~~~~~~~~~~~~~~~

   o LPC17: robustness of LCD driver has been improved

   o The application boots a little bit faster now

   o optional support for up to 32 DIN and DOUT shift registers
     (=256 inputs and 256 outputs)
     Currently only provided as compile option; increase
     MIOS32_SRIO_NUM_SR to 32 in mios32_config.h

   o the "sdcard_format" command allows to format the connected SD Card with FAT32
     from the MIOS Terminal


MIDIO128 V3.012
~~~~~~~~~~~~~~~

   o USB MSD driver: changed endpoint to avoid conflict with MIDI driver.
     Note that it's still not possible to use MSD and MIDI in parallel,
     but Windows and MacOS should accept the connection (again).
